# AG3NT

./: .env.example  .gitignore  README.md  test_openrouter.py
.github/workflows/: ci.yml
docs/: DEEPAGENTS_TOOLS_REFERENCE.md  DEVELOPER_QUICK_START.md  IMPLEMENTATION_SUMMARY.md  OPENROUTER_IMPLEMENTATION_SUMMARY.md  OPENROUTER_INTEGRATION.md  OPENROUTER_QUICKSTART.md  OPENROUTER_UPDATE_2026.md  TOOLS_COMPARISON_TABLE.md  TOOLS_DOCUMENTATION_INDEX.md  TOOLS_QUICK_REFERENCE.md  Tools_To_Add.md
docs/architecture/: ARCHITECTURE_AUDIT.md
examples/: openrouter_example.py
libs/deepagents/: README.md  pyproject.toml
libs/deepagents-cli/: README.md  pyproject.toml
libs/deepagents-cli/deepagents_cli/: agent.py  app.py  app.tcss  config.py  default_agent_prompt.md  main.py  ui.py
libs/deepagents-cli/deepagents_cli/widgets/: welcome.py
libs/deepagents-cli/examples/skills/skill-creator/: SKILL.md
libs/deepagents/deepagents/: __init__.py  agent_factory.py  graph.py  openrouter.py  vision.py
libs/deepagents/deepagents/approval/: __init__.py  ledger.py  policy.py
libs/deepagents/deepagents/backends/: filesystem.py  protocol.py
libs/deepagents/deepagents/compaction/: __init__.py  artifact_store.py  assembler.py  config.py  middleware.py  models.py  observation_masker.py  research_subagent.py  retrieval.py  summarizer.py
libs/deepagents/deepagents/context_engineering/: __init__.py  budget.py  cache.py  config.py  middleware.py
libs/deepagents/deepagents/mcp/: __init__.py  config.py  naming.py  tenant.py
libs/deepagents/deepagents/middleware/: __init__.py  advanced.py  contracts.py  filesystem.py  image_generation.py  mcp.py  patch_tool_calls.py  prompt_caching.py  skills.py  subagents.py  utilities.py  web.py
libs/deepagents/deepagents/middleware/universal_work/: __init__.py  middleware.py  models.py  retrieval.py  storage.py
libs/deepagents/deepagents/research/: __init__.py  browser_operator.py  config.py  distiller.py  evidence_ledger.py  models.py  orchestrator.py  page_reader.py  reviewer.py  session.py  source_collector.py
libs/deepagents/deepagents/search/: __init__.py  engine.py
libs/deepagents/deepagents/skills/: __init__.py  applier.py  builder.py  config.py  ledger.py  loader.py  middleware.py  models.py  registry.py  spawner.py
libs/deepagents/deepagents/skills/examples/code-review/: SKILL.md
libs/deepagents/deepagents/subagent/: __init__.py  containment.py
libs/deepagents/deepagents/testing/: __init__.py  fixtures.py  metrics.py  runner.py
libs/deepagents/examples/: interactive_agent.py  universal_work_demo.py
libs/deepagents/examples/mcp/: math_server.py  mcp_agent_example.py
libs/deepagents/tests/research/: __init__.py  test_distiller.py  test_page_reader.py  test_research_session.py  test_reviewer.py  test_source_collector.py
libs/deepagents/tests/skills/: __init__.py  test_loader.py  test_middleware.py  test_models.py  test_registry.py
libs/deepagents/tests/unit_tests/: test_approval_policy.py  test_compaction.py  test_context_engineering.py  test_mcp_config.py  test_mcp_naming.py  test_mcp_tenant.py  test_middleware.py  test_middleware_contracts.py  test_subagent_containment.py  test_testing_harness.py  test_universal_work.py
libs/deepagents/tests/unit_tests/backends/: test_filesystem_backend.py  test_filesystem_backend_async.py
libs/deepagents/tests/unit_tests/middleware/: test_new_middleware.py  test_skills_middleware.py  test_validate_path.py
libs/harbor/: pyproject.toml
