[project]
name = "deepagents-cli"
version = "0.0.12"
description = "Deepagents CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
  "deepagents==0.2.8,<1.0.0",
  "langchain>=1.2.3,<2.0.0",
  "langchain-openai>=1.1.7,<2.0.0",
  "langgraph-checkpoint-sqlite>=2.0.0,<3.0.0",
  "requests",
  "rich>=13.0.0",
  "prompt-toolkit>=3.0.52",
  "tavily-python",
  "python-dotenv",
  "daytona>=0.113.0",
  "modal>=0.65.0",
  "markdownify>=0.13.0",
  "runloop-api-client>=0.69.0",
  "pillow>=10.0.0",
  "pyyaml>=6.0",
  "textual>=1.0.0",
  "textual-autocomplete>=3.0.0",
  "aiosqlite>=0.19.0",
]

[project.scripts]
deepagents = "deepagents_cli:cli_main"
deepagents-cli = "deepagents_cli:cli_main"

[dependency-groups]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-socket>=0.7.0",
    "pytest-timeout>=2.3.1",
    "responses>=0.25.0",
    "ruff>=0.9.7",
]


dev = [
    "pytest",
    "pytest-cov",
    "build",
    "twine",
    "langchain-openai",
    "pytest-timeout>=2.4.0",
    "pytest-socket>=0.7.0",
    "pytest-asyncio>=1.2.0",
]

lint = [
    "ruff",
    "mypy"
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
deepagents_cli = ["default_agent_prompt.md"]

[tool.ruff]
line-length = 100
exclude = []

[tool.ruff.format]
docstring-code-format = true  # Formats code blocks in docstrings

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "F",       # pyflakes
    "I",       # isort
    "W",       # pycodestyle warnings
]
ignore = [
    "E501",    # Line too long (handled by formatter or manually)
]

[tool.pytest.ini_options]
timeout = 10  # Default timeout for all tests (can be overridden per-test)

[tool.mypy]
strict = true
ignore_missing_imports = true
enable_error_code = ["deprecated"]
# Optional: reduce strictness if needed
disallow_any_generics = false
warn_return_any = false

[tool.uv.sources]
deepagents = { path = "../deepagents" }
